<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/infobackground"
            android:contentDescription="@string/info_layout_background"/>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/launcher_icon_info"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>