<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_dimension"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_marginStart="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/distance_seekbar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/distance_text_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_kilometers"
            android:layout_marginEnd="8dp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_search_dimension"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"/>

</LinearLayout>