<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background"
    android:minHeight="64dp">

    <com.malinskiy.superrecyclerview.swipe.SwipeLayout
        android:id="@id/recyclerview_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_dismiss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:gravity="center"
            android:minHeight="64dp"
            android:tag="Bottom3"
            android:weightSum="10">

            <TextView
                android:id="@+id/confirm_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/solved_question"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:background="@color/white"
                android:text="@string/confirm"
                android:textColor="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_linear_cell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_background">

            <RelativeLayout
                android:id="@+id/bottom_relative_cell"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_text_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/description_text_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/title_text_profile"
                    android:layout_below="@+id/title_text_profile"
                    android:layout_marginEnd="32dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/description_hint"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/priority_image_profile"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:layout_alignBottom="@+id/title_text_profile"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_yellowcircle"
                    android:contentDescription="@string/segnalation_priority_image"/>

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_next_little"
                    android:contentDescription="@string/next_button"/>

            </RelativeLayout>

        </LinearLayout>

    </com.malinskiy.superrecyclerview.swipe.SwipeLayout>

</RelativeLayout>