<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sydney"
    tools:context="com.infinitycode.repaircity.walkthrough.WTPageFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/density_pixel_20"
        android:text="@string/wt_title_6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/density_pixel_20"
        android:text="@string/wt_description_6"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/mockup_profile"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mockup_image"/>

</RelativeLayout>
