<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background"
    android:minHeight="64dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:text="@string/title"
        android:id="@+id/title_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="8dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:text="@string/description_hint"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginEnd="55dp"
        android:id="@+id/description_text"
        android:layout_below="@+id/title_text"
        android:layout_alignStart="@+id/title_text" />

    <ImageView
        android:layout_width="11dp"
        android:layout_height="11dp"
        android:id="@+id/priority_image"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_yellowcircle"
        android:layout_alignBottom="@+id/title_text"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/segnalation_priority_image"/>

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/distance_circle"
        android:layout_alignTop="@+id/title_text"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_distancecircle"
        android:contentDescription="@string/circle_distance_sengalation_cell"/>

    <TextView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/distance_text"
        android:layout_alignStart="@+id/distance_circle"
        android:layout_alignEnd="@id/distance_circle"
        android:layout_alignTop="@id/distance_circle"
        android:layout_alignBottom="@id/distance_circle"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/distance_text_size"
        android:layout_alignParentEnd="true" />

</RelativeLayout>