<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <FrameLayout
        android:id="@+id/listFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/density_pixel_20"
        android:layout_marginEnd="@dimen/density_pixel_5"
        android:background="@null"
        android:src="@drawable/ic_next"
        android:contentDescription="@string/next_button"/>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/density_pixel_20"
        android:layout_marginEnd="@dimen/density_pixel_5"
        android:background="@null"
        android:src="@drawable/ic_close"
        android:contentDescription="@string/close_button_walktrough"/>

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/density_pixel_20"
        android:layout_marginStart="@dimen/density_pixel_5"
        android:background="@null"
        android:src="@drawable/ic_previous"
        android:contentDescription="@string/prev_button_walktrough"/>

</RelativeLayout>