<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.infinitycode.repaircity.activity.DetailActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scroll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layoutDirection="ltr">
        <requestFocus />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map_detail"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="15dp"
                tools:context=".MapActivity" />

            <TextView
                android:id="@+id/descrizione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description_label"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/descrizione_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="15sp"/>

            <LinearLayout
                android:id="@+id/main_horizontal_likes_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="32dp">

                    <ImageView
                        android:id="@+id/like_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_thumbs_up_empty"
                        android:contentDescription="@string/thumbs_up_image_empty"/>

                    <TextView
                        android:id="@+id/detail_likes_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/primary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="32dp">

                    <ImageView
                        android:id="@+id/not_like_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_thumbs_down_empty"
                        android:contentDescription="@string/thumbs_down_image_empty"/>

                    <TextView
                        android:id="@+id/detail_notlikes_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/detail_last_update_date"
                android:textSize="15sp"
                android:text="@string/last_modified_date"/>


            <LinearLayout
                android:id="@+id/linear_user_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/user_image_detail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_default_user"
                    app:border="true"
                    app:shadow="true"
                    app:border_width="2dp" />

                <TextView
                    android:id="@+id/user_name_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/segnalation_photo_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:src="@drawable/loading_image"
                android:contentDescription="@string/detail_sengalation_image_loading">
            </ImageView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
